--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Pacemaker</title>
+    <style>
+      body {
+        background-color: #E9E9E9;
+      }
+      </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
